--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,3 +1,3 @@
 {
-    "python.pythonPath": "C:\\ProgramData\\Anaconda3\\envs\\Masaustu\\python.exe"
+    "python.pythonPath": "D:\\envs\\OpenCvEnv\\Scripts\\python.exe"
 }
